# Volleyball-marketing

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  entrypoint.sh  manage.py
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: asgi.py  settings.py  urls.py
backend/campaigns/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/campaigns/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: CampaignsView.vue  DashboardView.vue  LoginView.vue  RegisterView.vue
