[tool.poetry]
name = "volleyball-marketing-backend"
version = "0.1.0"
description = "Volleyball marketing app API backend"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
psycopg = { extras = ["binary"], version = "^3.1" }
gunicorn = "^21.2"
python-dotenv = "^1.0"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
